--- a/backend/package.json
+++ b/backend/package.json
@@ -5,12 +5,16 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.4.0",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "prisma": "^4.4.0"
   }
 }
