--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,5 +15,8 @@
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "dependencies": {
+    "react-router-dom": "^6.4.2"
   }
 }
