--- a/backend/package.json
+++ b/backend/package.json
@@ -5,16 +5,20 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^4.4.0",
-    "express": "^4.18.2"
+    "@prisma/client": "^4.5.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.20"
   },
   "devDependencies": {
-    "prisma": "^4.4.0"
+    "prisma": "^4.5.0"
   }
 }
