--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.5.0",
+    "@sendgrid/mail": "^7.7.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-rate-limit": "^6.6.0",
