--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,12 @@
     "crypto-browserify": "^3.12.0",
     "events": "^3.3.0",
     "parcel": "^2.7.0",
+    "postcss": "^8.4.18",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "stream-browserify": "^3.0.0",
+    "tailwindcss": "^3.2.1",
     "util": "^0.12.5"
   },
   "dependencies": {
